[PDF Ink Signatures] Fix missing margin for InkSizeSelector
InkSizeSelector has a display of inline in ViewerSidePanelElement, which
causes it to ignore the top and bottom margins. Set the display to
inline-block to respect the top and bottom margins.

Bug: 351868764
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5973193
Commit-Queue: Andy Phan <andyphan@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1375324}

--- a/chrome/browser/resources/pdf/elements/ink_size_selector.css
+++ b/chrome/browser/resources/pdf/elements/ink_size_selector.css
@@ -7,6 +7,10 @@
  * #import=./shared_vars.css.js
  * #css_wrapper_metadata_end */
 
+:host {
+  display: inline-block;
+}
+
 div {
   display: flex;
   justify-content: center;
